chore(deps): bump template
