# docs/source/_static/openapi.yaml
@@ -37,6 +37,21 @@ components:
           type: array
       title: HTTPValidationError
       type: object
+    Health:
+      description: "Health status model.\n\nArgs:\n    BaseModel (_type_): 
+_description_"
+      properties:
+        reason:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Reason
+        status:
+          $ref: '#/components/schemas/_HealthStatus'
+      required:
+      - status
+      title: Health
+      type: object
     HelloWorldResponse:
       description: Response model for hello-world endpoint.
       properties:
@@ -71,6 +86,14 @@ components:
       - type
       title: ValidationError
       type: object
+    _HealthStatus:
+      description: "Health status enumeration.\n\nArgs:\n    StrEnum (_type_): 
+_description_"
+      enum:
+      - UP
+      - DOWN
+      title: _HealthStatus
+      type: string
 info:
   contact:
     email: helmuthva@gmail.com
@@ -113,6 +136,62 @@ Unprocessable\
       summary: Echo
       tags:
       - Basics
+  /health:
+    get:
+      description: "Check the health of the service.\n\nThis endpoint returns 
+the\
+        \ health status of the service.\nThe health status can be either UP or 
+DOWN.\n\
+        If the service is healthy, the status will be UP.\nIf the service is 
+unhealthy,\
+        \ the status will be DOWN and a reason will be provided.\nThe response 
+will\
+        \ have a 200 OK status code if the service is healthy,\nand a 500 
+Internal\
+        \ Server Error status code if the service is unhealthy.\n\nArgs:\n    
+service\
+        \ (Annotated[Service, Depends): _description_\n    response (Response): 
+_description_\n\
+        \nReturns:\n    Health: The health status of the service."
+      operationId: health_health_get
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Health'
+          description: Successful Response
+      summary: Health
+      tags:
+      - Observability
+  /healthz:
+    get:
+      description: "Check the health of the service.\n\nThis endpoint returns 
+the\
+        \ health status of the service.\nThe health status can be either UP or 
+DOWN.\n\
+        If the service is healthy, the status will be UP.\nIf the service is 
+unhealthy,\
+        \ the status will be DOWN and a reason will be provided.\nThe response 
+will\
+        \ have a 200 OK status code if the service is healthy,\nand a 500 
+Internal\
+        \ Server Error status code if the service is unhealthy.\n\nArgs:\n    
+service\
+        \ (Annotated[Service, Depends): _description_\n    response (Response): 
+_description_\n\
+        \nReturns:\n    Health: The health status of the service."
+      operationId: health_healthz_get
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Health'
+          description: Successful Response
+      summary: Health
+      tags:
+      - Observability
   /hello-world:
     get:
       description: "Return a hello world message.\n\nReturns:\n    
